fix: width on mobile #1187

--- a/src/style.css
+++ b/src/style.css
@@ -113,6 +113,7 @@
     left: initial;
   }
   .Toastify__toast {
+    --toastify-toast-width: 100%;
     margin-bottom: 0;
     border-radius: 0;
   }
